<resources>
    <string name="app_name">HotelZ On</string>
    <string name="minus">-</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="layanan_dan_fasilitas">Layanan dan Fasilitas</string>
    <string name="ac">AC</string>
    <string name="tv_led">TV LED</string>
    <string name="wifi">WIFI</string>
    <string name="air">Air Minum</string>
    <string name="peralatan">Peralatan Mandi</string>
    <string name="parkir">Tempat Parkir</string>
    <string name="total_harga">Total harga :</string>
    <string name="pembayaran">Pilih metode pembayaran</string>
    <string name="cash">Cash</string>
    <string name="kartu_kredit">Kartu kredit</string>
    <string name="visa">VISA</string>
    <string name="master_card">Master Card</string>
    <string name="transfer_atm">Transfer ATM</string>
    <string name="bayar">Bayar dan Cetak Tiket Hotel</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="registrasi">Registrasi</string>
    <string name="butuh_bantuan">Butuh bantuan ?</string>
    <string name="pilih_kota">Pilih Kota</string>
    <string name="simpan_data_kartu">Simpan Data Kartu</string>
</resources>
