<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/layanan_dan_fasilitas"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/minus" />
            <TextView
                android:text="@string/ac"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/minus" />
            <TextView
                android:text="@string/tv_led"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/minus" />
            <TextView
                android:text="@string/wifi"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/minus" />
            <TextView
                android:text="@string/air"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/minus" />
            <TextView
                android:text="@string/peralatan"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/minus" />
            <TextView
                android:text="@string/parkir"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>